--- a/index.html
+++ b/index.html
@@ -1,1 +1,164 @@
-"Hello World" 
+<!DOCTYPE HTML>
+<!--
+	Big Picture by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Big Picture by HTML5 UP</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
+
+		<!-- Header -->
+			<header id="header">
+				<h1>Louis Wang Website Portfolio</h1>
+				<nav>
+					<ul>
+						<li><a href="#intro">Intro</a></li>
+						<li><a href="#one">What I Do</a></li>
+						<li><a href="#two">Who I Am</a></li>
+						<li><a href="#work">My Work</a></li>
+						<li><a href="#contact">Contact</a></li>
+					</ul>
+				</nav>
+			</header>
+
+		<!-- Intro -->
+			<section id="intro" class="main style1 dark fullscreen">
+				<div class="content">
+					<header>
+						<p><em>Turning ideas into reality through code – one project at a time.</em></p>
+						<p><em>🚀 Innovative Developer | Data Enthusiast | Problem Solver</em></p>
+					</header>
+					<p>Welcome to my website! I’m Louis Wang—Software Programmer & Data Analyst. I build efficient systems, solve complex problems, and bring ideas to life with code.
+						I've worked on many projects, from web applications, games to data analysis tools. My passion lies in creating innovative solutions that make a difference.
+					</p>
+					<footer>
+						<a href="#one" class="button style2 down">More</a>
+					</footer>
+				</div>
+			</section>
+
+		<!-- One -->
+			<section id="one" class="main style2 right dark fullscreen">
+				<div class="content box style2">
+					<header>
+						<h2>What I Do</h2>
+					</header>
+					<p>I specialize in transforming complex problems into clean, functional solutions through code. Here's a look at what I focus on:
+						
+						<ul>
+							<li><strong>Web Development 🌐</strong>: Crafting dynamic and responsive websites using modern frameworks and technologies like HTML, CSS, JavaScript, and React.</li>
+							<li><strong>App Design 📱</strong>: Designing intuitive and user-friendly mobile and desktop apps with a focus on seamless UX/UI.</li>
+							<li><strong>Data Analysis 📊</strong>: Extracting valuable insights from data through SQL, Python, and machine learning to drive decision-making.</li>
+							<li><strong>Game Development 🎮</strong> Creating engaging game mechanics and experiences in Unreal Engine and Unity.</li>
+							<li><strong>Machine Learning 🤖</strong>: Leveraging data-driven models and algorithms to solve real-world problems and enhance user experience.</li>
+						</ul>
+	
+						I bring creativity 🎨 and technical expertise 🔧 to every project, always with a focus on delivering high-quality results.</p>
+				</div>
+
+				<div class="image-container">
+					<img src="images/coding.jpg" alt="Coding Image">
+				  </div>
+				<a href="#two" class="button style2 down anchored">Next</a>
+			</section>
+
+		<!-- Two -->
+			<section id="two" class="main style2 left dark fullscreen">
+				<div class="content box style2">
+					<header>
+						<h2>Who I Am</h2>
+					</header>
+					<p>Hi, I’m Louis Wang, a Software Programmer 💻 and Data Analyst 📊 with a passion for turning ideas into impactful solutions. With experience in web development 🌐, app design 📱, and machine learning 🤖, I thrive on solving complex problems through innovative code.
+						I’ve worked on everything from building dynamic game mechanics 🎮 in Unreal Engine to developing data-driven applications. My goal is to continuously learn 📚, grow 🌱, and create meaningful technology that makes a difference. 
+						Whether I’m optimizing algorithms ⚙️ or designing intuitive interfaces 🎨, I’m always focused on delivering quality and efficiency.</p>
+				</div>
+				<div class="image-box">
+					<img src="images/profile.png" alt="Louis Wang">
+				</div>
+				<a href="#work" class="button style2 down anchored">Next</a>
+			</section>
+
+		<!-- Work -->
+			<section id="work" class="main style3 primary">
+				<div class="content">
+					<header>
+						<h2>My Work</h2>
+						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
+						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
+						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
+					</header>
+
+					<!-- Gallery  -->
+						<div class="gallery">
+							<article class="from-left">
+								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt="" /></a>
+							</article>
+							<article class="from-right">
+								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a>
+							</article>
+							<article class="from-left">
+								<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="Air Lounge" alt="" /></a>
+							</article>
+							<article class="from-right">
+								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="Carry on" alt="" /></a>
+							</article>
+							<article class="from-left">
+								<a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" title="The sparkling shell" alt="" /></a>
+							</article>
+							<article class="from-right">
+								<a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" title="Bent IX" alt="" /></a>
+							</article>
+						</div>
+
+				</div>
+			</section>
+
+		<!-- Contact -->
+			<section id="contact" class="main style3 secondary">
+				<div class="content">
+					<header>
+						<h2>Hello. 👋</h2>
+						<p>Here are my socials, feel free to connect with me! 🌍</p>
+					</header>
+					<div class="box">
+						<ul class="icons">
+							<li><a href="https://www.facebook.com/Maemurarui" class="icon brands fa-facebook-f"><span class="label">Facebook 📘</span></a></li>
+							<li><a href="https://www.instagram.com/_rui_nstagram/" class="icon brands fa-instagram"><span class="label">Instagram 📸</span></a></li>
+							<li><a href="https://www.facebook.com/Maemurarui" class="icon brands fa-linkedin-in"><span class="label">LinkedIn 🔗</span></a></li>
+						</ul>
+					</div>
+				</div>
+			</section>
+
+		<!-- Footer -->
+			<footer id="footer">
+
+				<!-- Icons -->
+
+
+				<!-- Menu -->
+					<ul class="menu">
+						<li>&copy; 2025 Louis Wang. All rights reserved.</li>
+					</ul>
+
+			</footer>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.poptrox.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
+</html>
