--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Louis Wang Website Portfolio</h1>
+				<h1><a href="#intro">Louis Wang Website Portfolio</a></h1>
 				<nav>
 					<ul>
 						<li><a href="#intro">Intro</a></li>
@@ -24,6 +24,7 @@
 						<li><a href="#two">Who I Am</a></li>
 						<li><a href="#work">My Work</a></li>
 						<li><a href="#contact">Contact</a></li>
+						<button id="theme-toggle">Switch Theme 🌙 (WIP!)</button>
 					</ul>
 				</nav>
 			</header>
