Added title and description to each gallery picture

--- a/index.html
+++ b/index.html
@@ -91,32 +91,69 @@
 				<div class="content">
 					<header>
 						<h2>My Work</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
+						<p>Below are some of the works I have done over the past few years. Some are games, some are websites, some are apps.
+							Most of them are done in a project settings, with a team of 3-4 people. I am very proud of the work I have done, and I hope you will like them too!
+						</p>
 					</header>
 
-					<!-- Gallery  -->
-						<div class="gallery">
-							<article class="from-left">
-								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a>
-							</article>
-							<article class="from-left">
-								<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="Air Lounge" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="Carry on" alt="" /></a>
-							</article>
-							<article class="from-left">
-								<a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" title="The sparkling shell" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" title="Bent IX" alt="" /></a>
-							</article>
+				<!-- Gallery  -->
+				<div class="gallery">
+					<article class="from-left">
+						<a href="images/fulls/01.jpg" class="image fit">
+							<img src="images/thumbs/01.jpg" title="The Anonymous Red" alt="The Anonymous Red" />
+						</a>
+						<div class="caption">
+							<h3>The Anonymous Red</h3>
+							<p>A striking composition featuring bold red hues and abstract forms.</p>
 						</div>
+					</article>
+					<article class="from-right">
+						<a href="images/fulls/02.jpg" class="image fit">
+							<img src="images/thumbs/02.jpg" title="Airchitecture II" alt="Airchitecture II" />
+						</a>
+						<div class="caption">
+							<h3>Airchitecture II</h3>
+							<p>An artistic blend of modern architecture and open sky elements.</p>
+						</div>
+					</article>
+					<article class="from-left">
+						<a href="images/fulls/03.jpg" class="image fit">
+							<img src="images/thumbs/03.jpg" title="Air Lounge" alt="Air Lounge" />
+						</a>
+						<div class="caption">
+							<h3>Air Lounge</h3>
+							<p>A serene and futuristic space designed for relaxation and contemplation.</p>
+						</div>
+					</article>
+					<article class="from-right">
+						<a href="images/fulls/04.jpg" class="image fit">
+							<img src="images/thumbs/04.jpg" title="Carry on" alt="Carry on" />
+						</a>
+						<div class="caption">
+							<h3>Carry on</h3>
+							<p>Symbolizing perseverance, this image captures movement and endurance.</p>
+						</div>
+					</article>
+					<article class="from-left">
+						<a href="images/fulls/05.jpg" class="image fit">
+							<img src="images/thumbs/05.jpg" title="The Sparkling Shell" alt="The Sparkling Shell" />
+						</a>
+						<div class="caption">
+							<h3>The Sparkling Shell</h3>
+							<p>A mesmerizing natural shell reflecting light in dazzling patterns.</p>
+						</div>
+					</article>
+					<article class="from-right">
+						<a href="images/fulls/06.jpg" class="image fit">
+							<img src="images/thumbs/06.jpg" title="Bent IX" alt="Bent IX" />
+						</a>
+						<div class="caption">
+							<h3>Bent IX</h3>
+							<p>An abstract interpretation of bending metal structures in motion.</p>
+						</div>
+					</article>
+				</div>
+
 
 				</div>
 			</section>
