--- a/index.html
+++ b/index.html
@@ -99,30 +99,41 @@
 				<!-- Gallery  -->
 				<div class="gallery">
 					<article class="from-left">
-						<a href="images/fulls/01.jpg" class="image fit">
-							<img src="images/thumbs/01.jpg" title="The Anonymous Red" alt="The Anonymous Red" />
+						<a href="images/fulls/aht.jpg" class="image fit">
+							<img src="images/thumbs/aht.png" title="Army Heat Acclimatisation Training" alt="AHT" />
 						</a>
 						<div class="caption">
-							<h3>The Anonymous Red</h3>
-							<p>A striking composition featuring bold red hues and abstract forms.</p>
+							<h3>Army Heat Acclimatisation Training</h3>
+							<p>During the COVID-19 Circuit Breaker period, ensuring military personnel maintained peak physical fitness was a challenge. To address this, I collaborated with the Army Digitalisation Office (ADO) and the Centre of Excellence for Soldier Performance (CESP) to develop a Heat Acclimatization Training App for the military.
+
+								This app provided soldiers with customizable workouts, instructional videos, and remote progress tracking for commanders. Despite the constraints of remote development, our team successfully built and deployed the app through virtual collaboration. Additionally, we worked with volunteers from the Army Digital Troopers program, leveraging skilled digital talents from across the Army to bring this project to life.
+								
+								This initiative demonstrated the power of digital transformation in military training, ensuring operational readiness even in unprecedented times.</p>
 						</div>
 					</article>
 					<article class="from-right">
-						<a href="images/fulls/02.jpg" class="image fit">
-							<img src="images/thumbs/02.jpg" title="Airchitecture II" alt="Airchitecture II" />
+						<a href="images/fulls/currency-tracking.PNG" class="image fit">
+							<img src="images/thumbs/currency.png" title="Currency Tracking" alt="currency-tracking" />
 						</a>
 						<div class="caption">
-							<h3>Airchitecture II</h3>
-							<p>An artistic blend of modern architecture and open sky elements.</p>
+							<h3>Currency Tracking App</h3>
+							<p>The Tracking App enhances efficiency and accountability for both drivers and commanders by digitizing vehicle tracking and performance monitoring. 
+								Drivers can log mileage by platform, track their platform currency, monitor progress toward license conversion, and view past drives sorted by month or vehicle type. 
+								Commanders gain access to real-time driver statistics, mileage reports, and drive history while being able to edit platform qualifications (restricted to OC & CSM). 
+								The app also enables seamless drive logging, where drivers input vehicle details, odometer readings, and fuel status, with commanders approving completed drives. 
+								By reducing paperwork and improving oversight, this app ensures better management of military vehicle operations.</p>
 						</div>
 					</article>
 					<article class="from-left">
-						<a href="images/fulls/03.jpg" class="image fit">
-							<img src="images/thumbs/03.jpg" title="Air Lounge" alt="Air Lounge" />
+						<a href="images/fulls/sushimi.gif" class="image fit">
+							<img src="images/thumbs/sushimi.gif" title="Sushimi" alt="Sushimi" />
 						</a>
 						<div class="caption">
-							<h3>Air Lounge</h3>
-							<p>A serene and futuristic space designed for relaxation and contemplation.</p>
+							<h3>Sushimi</h3>
+							<p>Step into the world of Sushimi as BaMi, a determined sushi on a mission to deliver the perfect bento boxes! Travel through diverse sushi villages, collect fresh ingredients, and skillfully push ingredients into the right containers to complete orders.
+								Navigate through challenging levels featuring sinkholes—drop an empty rice ball to create a bridge, but be careful! Falling into a sinkhole means restarting the level. 
+								Enhance your deliveries with special sauces like wasabi and soy sauce, adding an extra layer of strategy to your quest. 
+								With each successful delivery, unlock new villages and face trickier puzzles in this delightful, sushi-themed adventure! 🍣🎮.</p>
 						</div>
 					</article>
 					<article class="from-right">
@@ -130,7 +141,7 @@
 							<img src="images/thumbs/04.jpg" title="Carry on" alt="Carry on" />
 						</a>
 						<div class="caption">
-							<h3>Carry on</h3>
+							<h3>Refraction</h3>
 							<p>Symbolizing perseverance, this image captures movement and endurance.</p>
 						</div>
 					</article>
@@ -139,7 +150,7 @@
 							<img src="images/thumbs/05.jpg" title="The Sparkling Shell" alt="The Sparkling Shell" />
 						</a>
 						<div class="caption">
-							<h3>The Sparkling Shell</h3>
+							<h3>Jarheads and Castles</h3>
 							<p>A mesmerizing natural shell reflecting light in dazzling patterns.</p>
 						</div>
 					</article>
@@ -148,7 +159,7 @@
 							<img src="images/thumbs/06.jpg" title="Bent IX" alt="Bent IX" />
 						</a>
 						<div class="caption">
-							<h3>Bent IX</h3>
+							<h3>Big Moth 2</h3>
 							<p>An abstract interpretation of bending metal structures in motion.</p>
 						</div>
 					</article>
@@ -169,7 +180,7 @@
 						<ul class="icons">
 							<li><a href="https://www.facebook.com/Maemurarui" class="icon brands fa-facebook-f"><span class="label">Facebook 📘</span></a></li>
 							<li><a href="https://www.instagram.com/_rui_nstagram/" class="icon brands fa-instagram"><span class="label">Instagram 📸</span></a></li>
-							<li><a href="https://www.facebook.com/Maemurarui" class="icon brands fa-linkedin-in"><span class="label">LinkedIn 🔗</span></a></li>
+							<li><a href="https://www.linkedin.com/in/louiswht/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn 🔗</span></a></li>
 						</ul>
 					</div>
 				</div>
