website skeleton done

--- a/index.html
+++ b/index.html
@@ -137,30 +137,37 @@
 						</div>
 					</article>
 					<article class="from-right">
-						<a href="images/fulls/04.jpg" class="image fit">
-							<img src="images/thumbs/04.jpg" title="Carry on" alt="Carry on" />
+						<a href="images/fulls/refraction.jpg" class="image fit">
+							<img src="images/thumbs/refraction.png" title="Refraction" alt="Refraction" />
 						</a>
 						<div class="caption">
 							<h3>Refraction</h3>
-							<p>Symbolizing perseverance, this image captures movement and endurance.</p>
+							<p>Step into the darkness of an ancient dungeon in Refraction, a puzzle-adventure game where light is your only guide. 
+								Solve intricate challenges by manipulating beams of light, using mirrors and reflective surfaces to illuminate hidden paths. 
+								As you traverse the eerie depths, uncover cryptic clues and piece together the mystery of what happened in this forgotten place. 
+								With every reflection, a new secret is revealed—will you find your way out, or be lost in the shadows forever? 💡🔦✨</p>
 						</div>
 					</article>
 					<article class="from-left">
-						<a href="images/fulls/05.jpg" class="image fit">
-							<img src="images/thumbs/05.jpg" title="The Sparkling Shell" alt="The Sparkling Shell" />
+						<a href="images/fulls/jarhead.gif" class="image fit">
+							<img src="images/thumbs/jarheads.png" title="Jarheads & Castles" alt="Jarheads & Castles" />
 						</a>
 						<div class="caption">
 							<h3>Jarheads and Castles</h3>
-							<p>A mesmerizing natural shell reflecting light in dazzling patterns.</p>
+							<p>In Jarheads & Castles, command a squad of fearless soldiers and guide them to safety through puzzle-filled battlefields! Inspired by Lemmings, this game challenges you to strategically deploy soldiers and overcome obstacles to reach the portal.
+								Use teamwork to manipulate the environment—activate bridges that move when enough soldiers stand on them, navigate treacherous terrain, and think ahead to ensure your squad survives.
+								In the final showdown, load your soldiers into a massive war cannon and launch an explosive assault on the evil magician guarding the last portal. Can you outsmart the battlefield and lead your troops to victory? 🎖️🕹️💣</p>
 						</div>
 					</article>
 					<article class="from-right">
-						<a href="images/fulls/06.jpg" class="image fit">
-							<img src="images/thumbs/06.jpg" title="Bent IX" alt="Bent IX" />
+						<a href="images/fulls/bigmoth2.png" class="image fit">
+							<img src="images/thumbs/PM.png" title="Big Moth 2" alt="Big Moth 2" />
 						</a>
 						<div class="caption">
 							<h3>Big Moth 2</h3>
-							<p>An abstract interpretation of bending metal structures in motion.</p>
+							<p>Step into the enchanting world of Big Moth 2, an Unreal Engine 5-powered adventure where you catch, collect, and trade moths to fulfill market requests. Travel through three distinct areas, each home to unique moth breeds, and unlock specialized equipment like the Moth Frame to enhance your captures.
+
+								Discover Companion Moths, each granting special abilities that aid you in your journey—whether it's improving catch rates, revealing rare species, or navigating tricky environments. Strategize, explore, and become the ultimate moth collector in this immersive and visually stunning adventure! 🦋✨.</p>
 						</div>
 					</article>
 				</div>
